# GTFramework

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  class_c_ex_task_self_destruct-members.html  class_c_ex_task_self_destruct.html  class_c_tekitou-members.html  class_c_tekitou.html  class_c_tekitou2-members.html  class_c_tekitou2.html  class_g_t_f_1_1_c_background_task_base-members.html  class_g_t_f_1_1_c_background_task_base.html  class_g_t_f_1_1_c_background_task_base__coll__graph.md5  class_g_t_f_1_1_c_background_task_base__inherit__graph.dot  class_g_t_f_1_1_c_background_task_base__inherit__graph.map  class_g_t_f_1_1_c_background_task_base__inherit__graph.md5  class_g_t_f_1_1_c_exclusive_task_base-members.html  class_g_t_f_1_1_c_exclusive_task_base.html  class_g_t_f_1_1_c_exclusive_task_base__coll__graph.dot  class_g_t_f_1_1_c_exclusive_task_base__coll__graph.md5  class_g_t_f_1_1_c_exclusive_task_base__inherit__graph.map  class_g_t_f_1_1_c_exclusive_task_base__inherit__graph.md5  class_g_t_f_1_1_c_task_base-members.html  class_g_t_f_1_1_c_task_base.html  class_g_t_f_1_1_c_task_base__inherit__graph.dot  class_g_t_f_1_1_c_task_base__inherit__graph.map  class_g_t_f_1_1_c_task_base__inherit__graph.md5  class_g_t_f_1_1_c_task_manager-members.html  class_g_t_f_1_1_c_task_manager.html  classes.html  classgtf_1_1_background_task_base-members.html  classgtf_1_1_background_task_base.html  classgtf_1_1_exclusive_task_base-members.html  classgtf_1_1_exclusive_task_base.html  classgtf_1_1_task_base-members.html  classgtf_1_1_task_base.html  classgtf_1_1_task_manager-members.html  (+52 more)
.github/workflows/: codeql.yml
cmake/modules/: CodeCoverage.cmake
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  groups_0.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  (+2 more)
src/dataHandler/: charlist.cpp  charlist.h
src/system/: task.cpp  task.h
test/: CMakeLists.txt  README.md  test.cpp
